# backend-fork

./: .clang-tidy  .codespellrc  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Jenkinsfile  LICENSE.md  README.md  StaticHTTPPackets.cpp  StaticWSPackets.cpp  main.cpp  vcpkg.json
.github/workflows/: build.yml
Packets/Implementation/: AuthenticateHandler.cpp  CreatePartyProcessor.cpp  EnterMatchmakingProcessor.cpp  FetchPlayerLoadoutsProcessor.cpp  GameConnectionDetails.cpp  GetBulkProfileDataProcessor.cpp  GetFriendsListAndRegisterOnlineHandler.cpp  GetHostConnectionDetailsProcessor.cpp  GetLoginDataProcessor.cpp  GetPlayerDataProcessor.cpp  HTTPRequestIdentifier.cpp  HeartbeatProcessor.cpp  IsInPartyHandler.cpp  Notification.cpp  PacketProcessor.cpp  RegexPacketProcessorHTTP.cpp  RegexPayloadProcessorWS.cpp  RequestRouter.cpp  SaveOutfitLoadoutProcessor.cpp  SavePlayerDataProcessor.cpp  SaveWeaponLoadoutProcessor.cpp  ServerMainThread.cpp  SetPlayerPresenceHandler.cpp  SetReadyProcessor.cpp  SpectreWebsocket.cpp  SpectreWebsocketRequest.cpp  StaticHTTPPackets.cpp  StaticResponseProcessorHTTP.cpp  StaticResponseProcessorWS.cpp  StaticWSPackets.cpp  SteamAuthTicket.cpp  SteamValidator.cpp  SubmitProviderIdHandler.cpp  UpdateItemV4Processor.cpp  UpdateItemsV0Processor.cpp  UpdatePartyPlayerProcessor.cpp  UpdatePartyProcessor.cpp  UpdatePresenceForPlayerHandler.cpp  WebsocketPayload.cpp
Packets/Model/: AuthenticateHandler.h  CreatePartyProcessor.h  EnterMatchmakingProcessor.h  FetchPlayerLoadoutsProcessor.h  FieldFetchProcessor.h  GameConnectionDetails.h  GetBulkProfileDataProcessor.h  GetFriendsListAndRegisterOnlineHandler.h  GetHostConnectionDetailsProcessor.h  GetLoginDataProcessor.h  GetPlayerDataProcessor.h  HTTPRequestIdentifier.h  HeartbeatProcessor.h  IsInPartyHandler.h  Notification.h  PacketProcessor.h  Regex.h  RegexPayloadProcessorHTTP.h  RegexPayloadProcessorWS.h  RequestRouter.h  SaveOutfitLoadoutProcessor.h  SavePlayerDataProcessor.h  SaveWeaponLoadoutProcessor.h  ServerMainThread.h  SetPlayerPresenceHandler.h  SetReadyProcessor.h  SpectreRpcType.h  SpectreWebsocket.h  SpectreWebsocketRequest.h  StaticHTTPPackets.h  StaticResponseProcessorHTTP.h  StaticResponseProcessorWS.h  StaticWSPackets.h  SteamAuthTicket.h  UpdateItemV4Processor.h  UpdateItemsV0Processor.h  UpdatePartyPlayerProcessor.h  UpdatePartyProcessor.h  UpdatePresenceForPlayerHandler.h  WebsocketPayload.h
Packets/Protoc/: GameConnectionDetails.proto  GetFriendsListAndRegisterOnlineResponse.proto  PresenceUpdateNotification.proto  SetPresenceRequest.proto  UpdatePlayerPresenceRequest.proto
Persistence/Implementation/: BanDatabase.cpp  BasicDatabase.cpp  Database.cpp  DatabaseFieldData.cpp  PartyDatabase.cpp  PlayerDatabase.cpp  ProtobufDatabase.cpp  ProtobufDatabaseFieldData.cpp  ProviderLinkDatabase.cpp
Persistence/Model/: AuthProvider.h  BanDatabase.h  BasicDatabase.h  Database.h  DatabaseFieldData.h  FieldKey.h  PartyDatabase.h  PlayerDatabase.h  ProtobufDatabase.h  ProtobufDatabaseFieldData.h  ProviderLinkDatabase.h
Persistence/Protoc/: FriendsList.proto  PlayerPresence.proto  SavedNotificationData.proto
resources/payloads/ws/game/: DefaultFriendsList.json  DefaultInventory.json  DefaultPlayerPresence.json  DefaultSavedNotifications.json
resources/testrequests/: wsSkipTests.txt
resources/testrequests/sequenced/party/: 1.json  2.json  3.json  5.json  6.json  inactive0.json
tests/Model/: BackendEnvironment.h  HTTPRequestTest.h  TestWebsocketClient.h  WebsocketRequestTest.h
tests/implementation/: BackendEnvironment.cpp  HTTPRequestTest.cpp  ProcessFiddlerLog.cpp  SequencedRequestTest.cpp  TestDeduplicator.cpp  TestWebsocketClient.cpp  WebsocketRequestTest.cpp  test_main.cpp
